@@ -4,7 +4,6 @@ importFrom(stats4, nobs)
 importFrom(stats4, plot)
 importFrom(stats4, summary)
 
-
 exportMethods(
 	"cmine",
 	"cplot",
